# shutter-sense

./: .gitignore  IMPLEMENTATION.md  README.md
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_api.py  test_backend.py
backend/app/: __init__.py  llm_advisor.py  metadata_extractor.py  settings_predictor.py
ios_app/: README.md
ios_app/ShutterSense/: ContentView.swift  ShutterSenseApp.swift
ios_app/ShutterSense/Models/: CameraModels.swift
ios_app/ShutterSense/Services/: APIService.swift  CoreMLService.swift
ios_app/ShutterSense/Utils/: ImagePicker.swift
ios_app/ShutterSense/ViewModels/: CameraViewModel.swift
ios_app/ShutterSense/Views/: CameraView.swift  MetadataView.swift  PredictionsView.swift  SuggestionsView.swift
ml_training/: README.md  example_usage.py  requirements.txt
ml_training/scripts/: convert_model.py  preprocess.py  train_model.py
